--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,4 +1,5 @@
-$color-primario: #183b31;     
-$color-secundario: #C69774;   
-$color-terciario: #F8DFD4;    
-$color-cuarto: #FFEFE8;        
+// Archivo _variables.scss actualizado con nueva paleta de colores
+$color-primario: #0D3B66;     // Azul oscuro
+$color-secundario: #1B4B5A;   // Azul-gris
+$color-terciario: #7A8B99;    // Gris azulado claro
+$color-cuarto: #C1D1E8;      // Gris claro
