modificados los estilos y añadido breadcrumb

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,5 +1,6 @@
 // Archivo _variables.scss actualizado con nueva paleta de colores
 $color-primario: #0D3B66;     // Azul oscuro
-$color-secundario: #1B4B5A;   // Azul-gris
+$color-secundario: #869db2;   // Azul-gris
 $color-terciario: #7A8B99;    // Gris azulado claro
 $color-cuarto: #C1D1E8;      // Gris claro
+$color-quinto: #000000;
