--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,6 +1,7 @@
 // Archivo _variables.scss actualizado con nueva paleta de colores
 $color-primario: #0D3B66;     // Azul oscuro
-$color-secundario: #869db2;   // Azul-gris
-$color-terciario: #7A8B99;    // Gris azulado claro
+$color-secundario: #2A2F41;   // Azul-gris
+$color-terciario: #A0ACB6;    // Gris azulado claro
 $color-cuarto: #C1D1E8;      // Gris claro
 $color-quinto: #000000;
+$color-sexto: #DFD8D8; //para el texto que esta sobre el fondo azul 
