foto de actores y peliculas sin foto añadidas, contraste arreglado

--- a/src/components/_styles.scss
+++ b/src/components/_styles.scss
@@ -19,7 +19,7 @@ body{
   }
 }
 
-  // Carrusel
+  // carrusel
   #carouselExampleSlidesOnly {
     .carousel-item {
       img {
@@ -28,7 +28,7 @@ body{
     }
   }
   
-  // Lista de películas
+  // lista de peliculas
   .card-link {
     text-decoration: none;
     color: inherit;
@@ -60,9 +60,7 @@ body{
         color: $color-quinto; 
       }
   
-      .position-absolute {
-        
-      }
+
     }
   
     
